low fidelity prototype

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,1 +1,18 @@
-<p>main-page works!</p>
+<div class="content-main">
+  <h1>Area creation</h1>
+
+  <div class="cards-main">
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+    <app-card-products></app-card-products>
+  </div>
+
+</div>
+
+
