--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<app-navigation></app-navigation>
-<app-sidebar></app-sidebar>
-<router-outlet />
+<header>
+  <app-navigation></app-navigation>
+</header>
+
+
+<div class="body">
+  <div class="content-main">
+    <app-sidebar></app-sidebar>
+    <app-main-page></app-main-page>
+  </div>
+
+</div>
+
 <app-footer></app-footer>
