--- a/src/app/components/card-products/card-products.component.html
+++ b/src/app/components/card-products/card-products.component.html
@@ -1,1 +1,10 @@
-<p>card-products works!</p>
+
+<div class="card">
+  <div class="card-title">
+    <h3>title</h3>
+  </div>
+  <div class="card-content">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+  </div>
+
+</div>
