--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<p>sidebar works!</p>
+<div class="sidebar">
+  <ul>
+    <li>Products</li>
+    <li>Manutention Calendar</li>
+    <li>Used Parts</li>
+  </ul>
+</div>
+
